# se-toolkit-lab-8

./: .env.docker.example  .gitmodules  REPORT.md  docker-compose.yml  pyproject.toml  test_mcp_vl.py  test_vl_container.py
backend/src/lms_backend/routers/: items.py
caddy/: Caddyfile
docs/design/: architecture.md
instructors/: lab-plan.md
instructors/file-reviews/: incomplete-sections.md
instructors/scripts/find-broken-links/: post-process-lychee.py
lab/setup/: setup-full.md  setup-simple.md
lab/tasks/required/: task-1.md  task-2.md  task-3.md  task-5.md
mcp/: pyproject.toml
mcp/lms_common/: __init__.py  formatters.py  lms_client.py  models.py
mcp/lms_mcp/: __init__.py  __main__.py
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  __main__.py  observability.py  server.py
nanobot/: .gitignore  Dockerfile  architecture.md  entrypoint.py  main.py  pyproject.toml
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
nanobot/workspace/skills/structured-ui/: SKILL.md
wiki/: gateway.md  llm-api.md  qwen-code-api.md
