[project]
name = "nanobot"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.14.*"
dependencies = [
    "mcp-lms",
    "nanobot-ai",
]

[tool.uv.sources]
nanobot-ai = { url = "https://github.com/HKUDS/nanobot/archive/e7d371ec1e6531b28898ec2c869ef338e8dd46ec.zip" }
mcp-lms = { workspace = true, editable = true }
