[project]
name = "mcp-obs"
version = "1.0.0"
description = "MCP server for observability (VictoriaLogs and VictoriaTraces)"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_obs"]
